FIX errors By irvannandika

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -481,3 +481,12 @@
     min-height: 56px;
   }
 } 
+/* Mobile Scrollbar Hide */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
